# get-familar-with-antlr

./: .gitignore  CMakeLists.txt  README.md  TypeScriptLexer.g4  TypeScriptParser.g4  abstract_parser.cpp  abstract_parser.h
official-demo/: TLexer.cpp  TLexer.h  TParser.cpp  TParser.g4  TParser.h  TParserBaseListener.cpp  TParserBaseListener.h  TParserBaseVisitor.cpp  TParserBaseVisitor.h  TParserListener.cpp  TParserListener.h  TParserVisitor.cpp  TParserVisitor.h  amf.g4  gen.sh  main.cpp
official-demo/.antlr/: TLexer.java  TParser.interp  TParser.java
ts-parser/: TypeScriptLexer.g4  TypeScriptParser.g4  abstract_parser.cpp  abstract_parser.h  abstract_parser.hpp  ast_to_json.cpp  ast_to_json.hpp  ast_visitor.hpp  common_def.cpp  common_def.hpp  common_macro .h  estree.cpp  estree.hpp  estree.ts  gen.sh
ts-parser/.antlr/: TypeScriptLexer.java  TypeScriptParser.java
ts-parser/cpp-gen/: TypeScriptLexer.cpp  TypeScriptLexer.h  TypeScriptLexerBase.cpp  TypeScriptParser.cpp  TypeScriptParser.h  TypeScriptParser.interp  TypeScriptParserBaseListener.cpp  TypeScriptParserBaseListener.h  TypeScriptParserBaseVisitor.cpp  TypeScriptParserBaseVisitor.h  TypeScriptParserListener.cpp  TypeScriptParserListener.h  TypeScriptParserVisitor.cpp  TypeScriptParserVisitor.h
ts-parser/gen-cpp-typescript/: TypeScriptLexer.cpp  TypeScriptLexer.h  TypeScriptLexerBase.h  TypeScriptParser.cpp  TypeScriptParser.h  TypeScriptParser.interp  TypeScriptParserBase.cpp  TypeScriptParserBase.h  TypeScriptParserBaseListener.cpp  TypeScriptParserBaseListener.h  TypeScriptParserBaseVisitor.cpp  TypeScriptParserBaseVisitor.h  TypeScriptParserListener.cpp  TypeScriptParserListener.h  TypeScriptParserVisitor.cpp  TypeScriptParserVisitor.h  tokentypes
ts-parser/test/: gen-cpp-typescript.test.cpp
